# serde_converter

./: .gitignore  Cargo.toml  Makefile.toml  README.md  bundle.js  index.css  index.html  index.js  main.js  makefile.toml  serde_web_converter.js  serde_web_converter_bg.wasm  upload_and_install.sh
pkg/: bundle.js  serde_web_converter.js  serde_web_converter_bg.wasm
src/: convertible.rs  document.rs  format.rs  lib.rs  payload_string.rs
