[package]
authors = [
  "Jakub Trąd <jakubtrad@gmail.com>"
]
edition = "2018"
license = "MIT/Apache-2.0"
name = "serde_web_converter"
readme = "README.md"
repository = "https://github.com/Dzejkop/serde_converter"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
serde = { version = "1.0.117", features = ["derive"] }
console_log = "0.2.0"
log = "0.4.11"
miniz_oxide = "0.4.3"
base64 = "0.13.0"
serde_qs = "0.7.0"
anyhow = "1.0"
serde_urlencoded = "0.7.0"

# Formats
serde_yaml = "0.8.14"
serde_json = "1.0.59"
ron = "0.6.2"
csv = "1.1.4"
toml = "0.5.7"
urlencoding = "1.1.1"

[dev-dependencies]
indoc = "1.0.3"
test-case = "1.0.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'InputEvent',
  'HtmlSelectElement',
  'HtmlTextAreaElement',
  'HtmlButtonElement',
  'HtmlParagraphElement',
  'HtmlDivElement',
  'HtmlInputElement',
  'CssStyleDeclaration',
  'Location'
]
